testsuite/tests/rep-poly/T13233.stderr

T13233.hs:14:11: error:
    • • Unsaturated use of a representation-polymorphic data constructor.
        The second argument of ‘(#,#)’
        does not have a fixed runtime representation.
        Its type is:
          a :: TYPE rep
      • Unsaturated use of a representation-polymorphic data constructor.
        The first argument of ‘(#,#)’
        does not have a fixed runtime representation.
        Its type is:
          a :: TYPE rep
    • In the first argument of ‘bar’, namely ‘(#,#)’
      In the expression: bar (#,#)
      In an equation for ‘baz’: baz = bar (#,#)

T13233.hs:22:16: error:
    • • Unsaturated use of a representation-polymorphic data constructor.
        The second argument of ‘(#,#)’
        does not have a fixed runtime representation.
        Its type is:
          b :: TYPE rep2
      • Unsaturated use of a representation-polymorphic data constructor.
        The first argument of ‘(#,#)’
        does not have a fixed runtime representation.
        Its type is:
          a :: TYPE rep1
    • In the first argument of ‘obscure’, namely ‘(#,#)’
      In the expression: obscure (#,#)
      In an equation for ‘quux’: quux = obscure (#,#)
